# WNOJGP

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  config.yml
.github/workflows/config.yml/: config.yml
include/wnoj_gp/: GPutils.h  GaussianProcessInterpolatorLie.h  GaussianProcessPriorLie.h
test/: dotest.cc
